hphp/hack/test/ifc/check/new.php.exp
File "new.php", line 12, characters 1-91:
Data with policy PRIVATE appears in context PUBLIC. (Typing[4379])
